# ustd-rs

./: .gitmodules  Cargo.toml  README.md  build.rs  test.sh
.github/workflows/: test.yml
backends/freertos/: Cargo.toml
backends/freertos/src/: fmt.rs  io.rs  lib.rs  macros.rs  panic.rs  sync.rs  task.rs  test.rs  time.rs
backends/std/: Cargo.toml
backends/std/src/: error.rs  fmt.rs  io.rs  lib.rs  sync.rs  task.rs  time.rs
examples/: spawn.rs
freertos/: FreeRTOSConfig.h  Makefile  hooks.c  hooks.h  main.c
src/: error.rs  io.rs  lib.rs  main.rs  sync.rs  task.rs  tests.rs
src/backend/: mod.rs
src/backend/freertos/: error.rs  interrupt.rs  io.rs  macros.rs  mod.rs  sync.rs  task.rs  test.rs  utils.rs
src/backend/std/: error.rs  interrupt.rs  macros.rs  mod.rs  sync.rs  task.rs
src/std/: sync.rs  task.rs
src/tests/: task.rs
src/tests/freertos/: FreeRTOSConfig.h  hooks.c
tests/: Cargo.toml  build.rs
tests/src/: main.rs  tasks.rs
tests/src/freertos/: hooks.c  ustd.c
