[package]
name = "ustd"
version = "0.1.0"
edition = "2021"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]

description = "Micro stdlib"
documentation = "https://docs.rs/ustd"
homepage = "https://github.com/agerasev/ustd-rs"
repository = "https://github.com/agerasev/ustd-rs.git"
readme = "README.md"
categories = ["os", "embedded", "no-std"]
keywords = ["std", "stdlib", "embedded"]
license = "MIT/Apache-2.0"

[features]
default = ["backend-std"]
backend-std = ["std"]
backend-freertos = ["freertos", "lazy_static/spin_no_std"]
test-freertos = ["backend-freertos", "freertos/hooks", "freertos-cargo-build"]
std = []
panic = []

[dependencies]
lazy_static = { version = "1.4.0", default-features = false }
macro_rules_attribute = "0.1.3"

[dependencies.freertos]
package = "freertos-rust"
path = "freertos-rust/freertos-rust"
default-features = false
features = ["sync", "time", "interrupt"]
optional = true

[build-dependencies]
freertos-cargo-build = { path = "freertos-rust/freertos-cargo-build", optional = true }
