[workspace]
members = ["backends/freertos", "backends/std", "tests"]

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]

[workspace.dependencies]
freertos = { package = "freertos-rust", path = "freertos-rust/freertos-rust" }
macro_rules_attribute = "0.2.2"
ufmt = "0.2.0"

[package]
name = "ustd"
version.workspace = true
edition.workspace = true
authors.workspace = true

description = "Micro stdlib"
documentation = "https://docs.rs/ustd"
homepage = "https://github.com/agerasev/ustd-rs"
repository = "https://github.com/agerasev/ustd-rs.git"
readme = "README.md"
categories = ["os", "embedded", "no-std"]
keywords = ["std", "stdlib", "embedded"]
license = "MIT/Apache-2.0"

[features]
std = ["backend-std"]
freertos = ["backend-freertos"]
panic = ["backend-freertos?/panic"]

[dependencies.backend-std]
package = "ustd-backend-std"
path = "backends/std"
optional = true

[dependencies.backend-freertos]
package = "ustd-backend-freertos"
path = "backends/freertos"
optional = true

[dev-dependencies]
macro_rules_attribute.workspace = true
