[package]
name = "ustd-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
std = ["ustd/std"]
freertos = ["ustd/freertos", "dep:freertos"]

[dependencies]
ustd = { path = ".." }
freertos = { workspace = true, features = ["hooks"], optional = true }
macro_rules_attribute.workspace = true
